2009-12-29 Roman,Maxim
- FIX:Archive.Val: The values archivation task is prevented for early start.
- FIX:DAQ.ICP_DAS: LP-8x81 controller set and save watchdog timer value is fixed.
    Serial modules save watchdog time value is fixed also.
- DAQ.ICP_DAS: Write fast data to OpenSCADA attributes is moved from resource of access to parallel bus.
- DAQ.OPC_UA: Binary protocol data access function is added and present request processing is rewrited.
- FIX:Archive.FSArch: Double files creation is prevented.
- FIX:UI.Vision: Time and date is localised and some updated into RunTime fullscreen mode.
- FIX:UI.Vision: Shape item crash by no inited variables of primitive "ElFigure" is fixed.


2009-12-25 Roman
- DAQ:Redundant controllers' status gate is added. Include error code and message.
- FIX:DAQ:A controller DB values copy prevent is added.
- FIX:DAQ:The redundant policy "<Optimal>" is fixed.
- UI.Vision, UI.WebVision: The 3px margin is added to horisontal labels of primitive "Diagram".
- UI.Vision: Font rise for message of access denid to page view is added.
- UI.Vision: The style display status field is hide for no one styles present.
- FIX:Archive: Access to archive values from redundant station for no bounded arrays is fixed.


2009-12-21 Roman
- DAQ: Not realised redundant mode "Symmetric" is commented.
- FIX:DAQ.ICP_DAS: The parallel bus' devices resource is merge for use common resource to access the parallel bus.
    Deletion parameter's attributes is made chekable to already presented self attributes.


2009-12-21 Maxim
- DB.SQLite, DB.MySQL, DB.FireBird,DB.DBF: Some fixes in the English translation variant are made.


2009-12-20 Roman
- SYS: The timeout field is added to functions taskCreate() and taskDestroy().
- FIX:DAQ.ICP_DAS: Fast module I-8017 processing is fixed.
- FIX:UI.VCAEngine: The processed widgets of session disabling is added on time parent widget deletion.


2009-12-18 Roman